<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/background_color"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">


        <TextView
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/element_between"
            android:text="@string/home_treading"
            android:textStyle="bold"
            android:textSize="@dimen/home_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/tradingSongs"
            android:paddingBottom="@dimen/element_between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/element_between"
            android:text="@string/home_artist"
            android:textStyle="bold"
            android:textSize="@dimen/home_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/artistView"
            android:paddingBottom="@dimen/element_between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/element_between"
            android:text="@string/home_mymusic"
            android:textStyle="bold"
            android:textSize="@dimen/home_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recommendSongs"
            android:paddingBottom="@dimen/element_between"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/element_between"
            android:text="@string/home_history"
            android:textStyle="bold"
            android:textSize="@dimen/home_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/historySongs"
            android:paddingBottom="@dimen/element_between"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>


</ScrollView>